# the-void-engine

./: CMakeLists.txt  README.md  build.sh  conanfile.txt  main.cpp  plan.drawio  planning.md  todo.md
.github/workflows/: build.yml
docs/: engine.md  game.md  index.html
engine/: Engine.cpp  Engine.hpp  Entity.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Triangle.cpp  Triangle.hpp  Window.cpp  Window.hpp  Windoww.cpp  engine.cpp  engine.hpp
game/: kendo.cpp  main.cpp
src/engine/: Camera.cpp  Camera.hpp  Engine.cpp  Engine.hpp  Entity.hpp  Mesh.hpp  PhysicsServer.cpp  PhysicsServer.hpp  Renderer.cpp  Renderer.hpp  Shader.hpp  Window.cpp  Window.hpp
src/game/: TODO.md  main.cpp
void-engine/include/core/: window.h
void-engine/include/gui/: button.h  text_renderer.h
void-engine/src/core/: window.cpp
void-engine/src/gui/: text_renderer.cpp
void-engine/test/: window_test.cpp
void-game/: .gitignore  CMakeLists.txt
void-game/src/: main.cpp
